refactor(grpc): use List.getFirst() in RegisterMethod (JDK 21+ idiom)